--- a/TP KNN/KNN_TD.ipynb
+++ b/TP KNN/KNN_TD.ipynb
@@ -19,7 +19,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Load the dataset"
+    "# Load the dataset\n",
+    "##### (download it from https://www.kaggle.com/datasets/msambare/fer2013)"
    ]
   },
   {
